# MIPS

./: .gitignore  CMakeLists.txt  README.md
include/: component.h  flipflop.h  gate.h  latch.h  mux.h
src/: CMakeLists.txt  component.cpp  flipflop.cpp  gate.cpp  latch.cpp  mux.cpp
tests/: CMakeLists.txt  test_flipflop.cpp  test_gate.cpp  test_latch.cpp  test_mux.cpp
